# flask-photo-gallery

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
templates/: base.html  gallery.html  upload.html
