[tool.poetry]
name = "flask-photo-gallery"
version = "0.1.0"
description = ""
authors = ["Tom Boone <tbc@tomboone.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
pillow = "^11.2.1"
python-dotenv = "^1.1.0"
azure-storage-blob = "^12.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
